# apps/api/src/copias-atendimento/modelo-copia-atendimento.ts
@@ -1,0 +1,10 @@
+export interface CopiaAtendimentoEmitida {
+  readonly token: string;
+  readonly expiraEm: Date;
+  readonly nomeArquivo: string;
+}
+
+export interface ArquivoCopiaAtendimento {
+  readonly conteudo: string;
+  readonly nomeArquivo: string;
+}
